Source/WebCore/platform/PlatformEvent.h
@@ -30,7 +30,7 @@ namespace WebCore {
 
 class PlatformEvent {
 public:
-    enum Type {
+    enum Type : uint8_t {
         NoType = 0,
 
         // PlatformKeyboardEvent
@@ -57,7 +57,7 @@ public:
 #endif
     };
 
-    enum Modifiers {
+    enum Modifiers : uint8_t {
         AltKey      = 1 << 0,
         CtrlKey     = 1 << 1,
         MetaKey     = 1 << 2,
