Source/WebCore/replay/UserInputBridge.h
@@ -31,6 +31,10 @@
 #include "ScrollTypes.h"
 #include <wtf/Noncopyable.h>
 
+namespace JSC {
+class InputCursor;
+}
+
 namespace WebCore {
 
 struct FrameLoadRequest;
@@ -52,6 +56,19 @@ class UserInputBridge {
     WTF_MAKE_NONCOPYABLE(UserInputBridge);
 public:
     UserInputBridge(Page&);
+
+#if ENABLE(WEB_REPLAY)
+    enum class State {
+        Capturing,
+        Open,
+        Replaying,
+    };
+
+    void setState(State bridgeState) { m_state = bridgeState; }
+    State state() const { return m_state; }
+
+    JSC::InputCursor& activeCursor() const;
+#endif
 
     // User input APIs.
 #if ENABLE(CONTEXT_MENUS)
@@ -77,6 +94,9 @@ public:
 
 private:
     Page& m_page;
+#if ENABLE(WEB_REPLAY)
+    State m_state;
+#endif
 };
 
 } // namespace WebCore
